added h2 content and style

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,20 @@
-h1 {
+body {
   font-family: "Poppins", sans-serif;
+}
+
+h1,
+h2 {
+  text-align: center;
+}
+
+h1 {
   font-size: 96px;
   line-height: 144px;
   font-weight: 700;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 60px;
 }
