--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,74 @@
 body {
   font-family: "Poppins", sans-serif;
+  background-color: rgba(18, 16, 29, 1);
 }
 
-h1,
-h2 {
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+header {
+  background-image: linear-gradient(rgba(39, 32, 68, 0.6), rgba(0, 0, 0, 0.6)),
+    url(/src/images/Edimburgh-castle.JPG);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  color: white;
   text-align: center;
+  padding: 200px 0;
 }
 
-h1 {
+header h1 {
   font-size: 96px;
-  line-height: 144px;
+  line-height: 1.5;
   font-weight: 700;
+  margin: 0;
 }
 
-h2 {
+header h2 {
   font-size: 40px;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 1.5;
+  margin: 0;
+}
+
+header h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: 900;
+  letter-spacing: 5px;
+  margin: 0;
+}
+
+header a {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  color: rgb(39, 32, 68);
+  text-decoration: none;
+  background-color: white;
+  padding: 16px 32px 16px 32px;
+  text-transform: uppercase;
+  margin-top: 32px;
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 60px 0;
+  }
+
+  header h1 {
+    font-size: 48px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
+
+  header h3 {
+    font-size: 12px;
+  }
 }
