started footer and added background img to it

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,34 @@ header a {
   margin-top: 32px;
 }
 
-@media (max-width: 900px) {
+footer {
+  color: white;
+  text-align: left;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.85),
+      rgba(39, 32, 68, 0.9)
+    ),
+    url(/src/images/Edimburgh-footer.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+}
+
+footer h4 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+footer p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  opacity: 0.7;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
