added grid to footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,17 @@ body {
   margin: 0 auto;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 16px;
+}
+
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 header {
   background-image: linear-gradient(rgba(39, 32, 68, 0.6), rgba(0, 0, 0, 0.6)),
     url(/src/images/Edimburgh-castle.JPG);
@@ -79,6 +90,21 @@ footer p {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
+  opacity: 0.7;
+}
+
+footer ul {
+  padding: 0;
+}
+
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer a {
+  color: white;
   opacity: 0.7;
 }
 
