--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,14 @@ body {
   margin: 30px 0;
 }
 
+.card-header.grid {
+  grid-gap: 0;
+}
+
+.card-header img {
+  height: 100%;
+}
+
 .card-body {
   padding: 30px;
 }
@@ -53,6 +61,11 @@ body {
   margin: 0 auto;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+
 header {
   background-image: linear-gradient(rgba(39, 32, 68, 0.6), rgba(0, 0, 0, 0.6)),
     url(/src/images/Edimburgh-castle.JPG);
@@ -61,7 +74,7 @@ header {
   background-position: top;
   color: white;
   text-align: center;
-  padding: 200px 0;
+  padding: 200px 10px;
 }
 
 header h1 {
@@ -212,7 +225,7 @@ footer a {
   opacity: 0.7;
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
@@ -256,5 +269,13 @@ footer a {
     width: 85%;
     display: block;
     margin: 0 auto;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .embed {
+    aspect-ratio: 16/9;
   }
 }
