--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
 body {
   font-family: "Poppins", sans-serif;
-  background-color: rgba(24, 21, 37, 1);
+  background-color: rgb(18, 16, 29);
 }
 
 .container {
-  max-width: 1400px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -147,10 +147,11 @@ main p {
 
 section {
   margin: 0 auto;
-  padding: 100px;
+  padding: 80px 100px 80px;
 }
 
-.first-section {
+.first-section,
+.photos-section {
   background-color: rgb(18, 16, 29);
 }
 
@@ -160,11 +161,13 @@ section {
 }
 
 .second-section {
-  background-color: (24, 21, 37, 1);
+  background-color: rgba(24, 21, 37, 1);
 }
 
 .second-section h2,
-.second-section h3 {
+.second-section h3,
+.photos-section h2,
+.photos-section h3 {
   text-align: center;
 }
 
@@ -182,6 +185,16 @@ main h5 {
   line-height: 1.5;
   text-align: left;
   margin: 0;
+}
+
+.photos-header {
+  margin-bottom: 40px;
+}
+
+.photos-section img {
+  aspect-ratio: 1/1;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 footer {
@@ -225,7 +238,7 @@ footer a {
   opacity: 0.7;
 }
 
-@media (max-width: 960px) {
+@media (max-width: 1100px) {
   header {
     padding: 60px 0;
   }
