reorganized css file, added filter and finished learn more btn

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,10 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+.img-responsive {
+  display: block;
+  width: 100%;
+}
 .card {
   background-color: rgb(39, 36, 53);
   margin: 30px 0;
@@ -145,32 +149,6 @@ main p {
   opacity: 0.5;
 }
 
-section {
-  margin: 0 auto;
-  padding: 80px 100px 80px;
-}
-
-.first-section,
-.photos-section {
-  background-color: rgb(18, 16, 29);
-}
-
-.img-responsive {
-  display: block;
-  width: 100%;
-}
-
-.second-section {
-  background-color: rgba(24, 21, 37, 1);
-}
-
-.second-section h2,
-.second-section h3,
-.photos-section h2,
-.photos-section h3 {
-  text-align: center;
-}
-
 main h4 {
   font-size: 24px;
   font-weight: 700;
@@ -187,11 +165,33 @@ main h5 {
   margin: 0;
 }
 
+section {
+  margin: 0 auto;
+  padding: 80px 100px 80px;
+}
+
+.first-section,
+.photos-section {
+  background-color: rgb(18, 16, 29);
+}
+
+.second-section {
+  background-color: rgba(24, 21, 37, 1);
+}
+
+.second-section h2,
+.second-section h3,
+.photos-section h2,
+.photos-section h3 {
+  text-align: center;
+}
+
 .photos-header {
   margin-bottom: 40px;
 }
 
 .photos-section img {
+  filter: saturate(150%);
   aspect-ratio: 1/1;
   max-width: 600px;
   margin: 0 auto;
@@ -276,12 +276,6 @@ footer a {
 
   main h2 {
     font-size: 32px;
-  }
-
-  .edimburgh-img {
-    width: 85%;
-    display: block;
-    margin: 0 auto;
   }
 
   .card-header img {
